--- a/JS-Applications/LAB`s/04.Templating/package.json
+++ b/JS-Applications/LAB`s/04.Templating/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "04.Templating",
+  "name": "Lab-Solution",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "handlebars": "^4.1.1",
-    "mustache": "^3.0.1"
+    "handlebars": "^4.1.0"
   }
 }
